--- a/index.html
+++ b/index.html
@@ -30,16 +30,29 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>studentdegrees</title>
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = '2499285937';
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="./flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
- <h1>tes>/h1>
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        }
+      }).then(function(engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(function(appRunner) {
+        return appRunner.runApp();
+      });
+    });
+  </script>
 </body>
 </html>
